--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-i18n-errors",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Extension to ember-i18n to translate error messages within the route hierarchy",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -15,7 +15,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Miguel Camba",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
@@ -38,7 +38,10 @@
     "ember-try": "0.0.6"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-i18n",
+    "errors",
+    "fallback"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.0.0"
