--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/cibernox/ember-i18n-errors",
   "engines": {
     "node": ">= 0.10.0"
   },
